Inicialiazo test de perfomance , hay que crear el algoritmo que saque el dispositivo en donde se esta realizando la prueba , asi como crear una tabla de 1000x1000 al momento de hacer click al boton de iniciar, luego calcular el tiempo

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~7.0.0",
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
+    "ngx-progressbar": "^2.1.1",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
