Agregada funcion de actualizar una fila

--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie <= 10",
+    "not ie_mob <= 10"
+  ]
 }
